justify content align content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
 <body>
     <div class="container">
 
-        <div><img src="img/1.jpg"/></div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+
+        <!-- <div class="header">HEADER</div>
+        <div class="menu">MENU</div>
+        <div class="content">CONTENT</div>
+        <div class="footer">FOOTER</div> -->
+
+        <!-- <div><img src="img/1.jpg"/></div>
         <div class="vertical"><img src="img/1.png"/></div>
         <div class="horizontal"><img src="img/2.jpg"/></div>
         <div><img src="img/2.png"/></div>
@@ -31,7 +43,7 @@
         <div><img src="img/2PCS-SQNSHT-07.JPG"/></div>
         <div class="big"><img src="img/2PCS-SQNSHT-03A.JPG"/></div>
         <div><img src="img/2PCS-SQNSHT-04.JPG"/></div>
-        <div class="vertical"><img src="img/2PCS-SQNSHT-05.JPG"/></div>
+        <div class="vertical"><img src="img/2PCS-SQNSHT-05.JPG"/></div> -->
 
         <!-- <div>1</div>
         <div>2</div>
@@ -46,10 +58,7 @@
         <div>11</div>
         <div>12</div> -->
 
-        <!-- <div class="header">HEADER</div>
-        <div class="menu">MENU</div>
-        <div class="content">CONTENT</div>
-        <div class="footer">FOOTER</div> -->
+       
     </div>
 </body>
 </html>
